# kicad-mcp

./: .gitignore  LICENSE  README.md  credential_export.sh  pyproject.toml  verify_agent.sh
.cursor/skills/kicad/: SKILL.md
.cursor/skills/kicad_review/: SKILL.md
kicad_mcp/: __init__.py  __main__.py  app.py  cli.py  config.py  parsing.py  pcb_model.py  project.py  prompts.py  schematic_pages.py  sexpr.py
kicad_mcp/review/: __init__.py  compare.py  drc_report.py  footprint_kicad_export.py  footprint_preview_svg.py  geometry.py  layout.py  manufacturing.py  pcb_region_svg.py  schematic.py  schematic_pdf.py
scripts/: analyze_fp_svg.py  build_bom_cost_excel.py  build_bom_cost_excel_all.py  build_bom_cost_excel_digikeys.py  build_bom_cost_excel_lcsc.py  build_bom_cost_excel_mouser.py  integration_test.py  smoke_test.py
src/: server.py
tests/: integration_test.py  smoke_test.py  test_bom_cost_all.py  test_bom_cost_digikey.py  test_bom_cost_lcsc.py  test_bom_cost_mouser.py  test_drc_report.py  test_footprint_kicad_export.py  test_footprint_preview.py  test_lcsc.py  test_library.py  test_pcb_model.py  test_pcb_region_svg.py  test_samacsys.py  test_schematic_pdf.py  test_ultralibrarian.py
