[project]
name = "kicad-mcp"
version = "0.3.0"
description = "MCP server for KiCad schematic and PCB layout design review"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.4.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
]

[project.scripts]
kicad-mcp = "kicad_mcp.app:main"

[project.optional-dependencies]
playwright = [
    "playwright>=1.61.0",
]

[tool.hatch.build.targets.wheel]
packages = ["kicad_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
